[package]
name = "rust_study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main_1"
path = "src/main_1.rs"

[[bin]]
name = "main_2"
path = "src/main_2.rs"

[[bin]]
name = "mut"
path = "src/mut.rs"